--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
-    "@tauri-apps/plugin-store": "^2.2.0",
-    "vite-plugin-top-level-await": "^1.4.4"
+    "@tauri-apps/plugin-store": "^2.2.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.5",
