--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: 'publish'
 
 on:
   push:
-    branches:
-      - main
+    tags:        
+      - '*' # Push events to every tag not containing /
 
 jobs:
   publish-tauri:
